maestro-hive/maestro_ml/infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maestro-ml
  labels:
    name: maestro-ml
    environment: production
